yu ping guo he zuo de ying yin gong zuo shi you mei ti yuan yin zhi qing ren shi de hua shuo ping guo

--- a/html/date/2024-05/page-2.htm
+++ b/html/date/2024-05/page-2.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8029.htm" title="简述动物防疫管理的要点是什么（简述动物防疫管理的要点是什么意思）">简述动物防疫管理的要点是什么（简述动物防疫管理的要点是什么意思）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8307.htm" title="中国十大动物疫苗公司排名第一（中国动物疫苗十强上市公司）">中国十大动物疫苗公司排名第一（中国动物疫苗十强上市公司）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8858.htm" title="南瓜小米粥的做法家常做法大全(南瓜小米粥如何做好吃)">南瓜小米粥的做法家常做法大全(南瓜小米粥如何做好吃)</a></li>
-                        <li class="py-2"><a href="/html/category/article-7976.htm" title="什么品牌的手表适合年轻人戴(哪种手表适合年轻人)">什么品牌的手表适合年轻人戴(哪种手表适合年轻人)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8749.htm" title="安全摇篮哪个牌子好(摇篮安宝宝奶粉的特点)">安全摇篮哪个牌子好(摇篮安宝宝奶粉的特点)</a></li>
-                        <li class="py-2"><a href="/html/category/article-7975.htm" title="宠物领养证如何办理的流程（宠物领养程序怎么领养）">宠物领养证如何办理的流程（宠物领养程序怎么领养）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7868.htm" title="猫粮的生产技术有哪些（猫粮的生产过程）">猫粮的生产技术有哪些（猫粮的生产过程）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7811.htm" title="被误解千年的语句（戏王之王电视剧）全程干货，">被误解千年的语句（戏王之王电视剧）全程干货，</a></li>
-                        <li class="py-2"><a href="/html/category/article-8196.htm" title="宠物托运送货上门多少钱（宠物托运送货上门多少钱一个月）">宠物托运送货上门多少钱（宠物托运送货上门多少钱一个月）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7812.htm" title="开动物诊所挣钱吗（开动物诊所需要什么条件）">开动物诊所挣钱吗（开动物诊所需要什么条件）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9799.htm" title="宠物领养中心app 宠物领养中心要钱吗">宠物领养中心app 宠物领养中心要钱吗</a></li>
+                        <li class="py-2"><a href="/html/category/article-10525.htm" title="宠物免费问诊（宠物免费问诊线上平台）">宠物免费问诊（宠物免费问诊线上平台）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10174.htm" title="宠物领养市场规模分析图（宠物领养数据）">宠物领养市场规模分析图（宠物领养数据）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10576.htm" title="领养宠物协议 领养宠物协议书范本">领养宠物协议 领养宠物协议书范本</a></li>
+                        <li class="py-2"><a href="/html/category/article-9279.htm" title="牛排汤做法和配方(牛排汤的制作)">牛排汤做法和配方(牛排汤的制作)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10119.htm" title="台州旅游必去十大景点(台州旅游景点哪里好玩的地方)">台州旅游必去十大景点(台州旅游景点哪里好玩的地方)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10069.htm" title="蠕动泵与计量泵的差别(蠕动泵的计量方法)">蠕动泵与计量泵的差别(蠕动泵的计量方法)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10474.htm" title="宠物医院前台年终总结（宠物医院前台工作计划）">宠物医院前台年终总结（宠物医院前台工作计划）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10367.htm" title="开一家宠物店需要什么条件（开一家宠物店都需要什么?）">开一家宠物店需要什么条件（开一家宠物店都需要什么?）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10228.htm" title="动物疫苗在哪买比较好呢（动物疫苗在哪里买）">动物疫苗在哪买比较好呢（动物疫苗在哪里买）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,8 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">10</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">52</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
