--- a/html/date/2024-06/page-6.htm
+++ b/html/date/2024-06/page-6.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8085.htm" title="成都宠物托运公司哪家比较好一点（成都宠物物流公司）">成都宠物托运公司哪家比较好一点（成都宠物物流公司）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8420.htm" title="动物医院许可证办理流程图（动物医院诊疗许可证办理）">动物医院许可证办理流程图（动物医院诊疗许可证办理）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8472.htm" title="广州宠物领养平台官网电话（广州市宠物领养平台）">广州宠物领养平台官网电话（广州市宠物领养平台）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8030.htm" title="动物医院叫什么名字啊英文（动物医院 英文）">动物医院叫什么名字啊英文（动物医院 英文）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7812.htm" title="开动物诊所挣钱吗（开动物诊所需要什么条件）">开动物诊所挣钱吗（开动物诊所需要什么条件）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8250.htm" title="蛋糕的做法烤箱新手做（蛋糕的做法烤箱新手做不用牛奶）">蛋糕的做法烤箱新手做（蛋糕的做法烤箱新手做不用牛奶）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7868.htm" title="猫粮的生产技术有哪些（猫粮的生产过程）">猫粮的生产技术有哪些（猫粮的生产过程）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8195.htm" title="知名奶茶店品牌(前10名奶茶店有哪些牌子)">知名奶茶店品牌(前10名奶茶店有哪些牌子)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8750.htm" title="北京中农大动物医院有限公司待遇 北京中农大动物医院有限公司待遇怎么样">北京中农大动物医院有限公司待遇 北京中农大动物医院有限公司待遇怎么样</a></li>
-                        <li class="py-2"><a href="/html/category/article-8029.htm" title="简述动物防疫管理的要点是什么（简述动物防疫管理的要点是什么意思）">简述动物防疫管理的要点是什么（简述动物防疫管理的要点是什么意思）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10367.htm" title="开一家宠物店需要什么条件（开一家宠物店都需要什么?）">开一家宠物店需要什么条件（开一家宠物店都需要什么?）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10525.htm" title="宠物免费问诊（宠物免费问诊线上平台）">宠物免费问诊（宠物免费问诊线上平台）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9336.htm" title="青岛想念动物医院怎么样（青岛想念动物医院怎么样啊）">青岛想念动物医院怎么样（青岛想念动物医院怎么样啊）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10526.htm" title="宠物粮商标名字 宠物粮商标名字大全">宠物粮商标名字 宠物粮商标名字大全</a></li>
+                        <li class="py-2"><a href="/html/category/article-10315.htm" title="海拉鲁大陆百度百科 海拉鲁大陆是什么">海拉鲁大陆百度百科 海拉鲁大陆是什么</a></li>
+                        <li class="py-2"><a href="/html/category/article-9547.htm" title="自制狗粮机 自制狗粮机器">自制狗粮机 自制狗粮机器</a></li>
+                        <li class="py-2"><a href="/html/category/article-10474.htm" title="宠物医院前台年终总结（宠物医院前台工作计划）">宠物医院前台年终总结（宠物医院前台工作计划）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10173.htm" title="开个小型宠物食品加工厂怎么接单子呢（开个小型宠物食品加工厂怎么接单子呢）">开个小型宠物食品加工厂怎么接单子呢（开个小型宠物食品加工厂怎么接单子呢）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9907.htm" title="宠物粮食品牌上市公司名单最新（国内宠物粮上市公司）">宠物粮食品牌上市公司名单最新（国内宠物粮上市公司）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10473.htm" title="川式干锅鸭的做法大全(川式干锅鸭的做法和配料)">川式干锅鸭的做法大全(川式干锅鸭的做法和配料)</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,8 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">10</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">52</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
