--- a/html/date/2024-07/page-5.htm
+++ b/html/date/2024-07/page-5.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-7756.htm" title="自己给狗狗打的疫苗能办狗证吗?（自己给狗狗打的疫苗,疫苗本有用吗）">自己给狗狗打的疫苗能办狗证吗?（自己给狗狗打的疫苗,疫苗本有用吗）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8140.htm" title="宠物粮怎么加工出来的 宠物粮怎么加工出来的呢">宠物粮怎么加工出来的 宠物粮怎么加工出来的呢</a></li>
-                        <li class="py-2"><a href="/html/category/article-8910.htm" title="宠物商标名字大全10000个 宠物商标名字大全10000个带图片">宠物商标名字大全10000个 宠物商标名字大全10000个带图片</a></li>
-                        <li class="py-2"><a href="/html/category/article-8308.htm" title="减脂番茄豆腐汤的做法(低脂番茄豆腐汤)">减脂番茄豆腐汤的做法(低脂番茄豆腐汤)</a></li>
-                        <li class="py-2"><a href="/html/category/article-7921.htm" title="动物打一针疫苗多少钱啊（动物打疫苗的作用）">动物打一针疫苗多少钱啊（动物打疫苗的作用）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8195.htm" title="知名奶茶店品牌(前10名奶茶店有哪些牌子)">知名奶茶店品牌(前10名奶茶店有哪些牌子)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8909.htm" title="动物疫苗的作用有哪些方面的问题 动物疫苗的作用有哪些方面的问题呢">动物疫苗的作用有哪些方面的问题 动物疫苗的作用有哪些方面的问题呢</a></li>
-                        <li class="py-2"><a href="/html/category/article-8582.htm" title="开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）">开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7701.htm" title="哪个处理器的核显性能最高(哪款处理器的核显性能好)">哪个处理器的核显性能最高(哪款处理器的核显性能好)</a></li>
-                        <li class="py-2"><a href="/html/category/article-7812.htm" title="开动物诊所挣钱吗（开动物诊所需要什么条件）">开动物诊所挣钱吗（开动物诊所需要什么条件）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10575.htm" title="宠物店赔钱吗（宠物店暴利吗）">宠物店赔钱吗（宠物店暴利吗）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9392.htm" title="螺杆泵品牌排名(中国十大螺杆泵品牌)">螺杆泵品牌排名(中国十大螺杆泵品牌)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10576.htm" title="领养宠物协议 领养宠物协议书范本">领养宠物协议 领养宠物协议书范本</a></li>
+                        <li class="py-2"><a href="/html/category/article-10473.htm" title="川式干锅鸭的做法大全(川式干锅鸭的做法和配料)">川式干锅鸭的做法大全(川式干锅鸭的做法和配料)</a></li>
+                        <li class="py-2"><a href="/html/category/article-9602.htm" title="成年猫打几针（成年猫打几针疫苗可以绝育）">成年猫打几针（成年猫打几针疫苗可以绝育）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9852.htm" title="被猫咬了怎么判断没事（被猫抓了怎么判断没事）">被猫咬了怎么判断没事（被猫抓了怎么判断没事）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10627.htm" title="动物在哪打疫苗好（动物在哪打疫苗好一点）">动物在哪打疫苗好（动物在哪打疫苗好一点）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9226.htm" title="甘蓝菜的做法（甘蓝菜的做法大全家常）">甘蓝菜的做法（甘蓝菜的做法大全家常）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10227.htm" title="天津宠物领养中心电话地址 天津宠物领养中心电话地址查询">天津宠物领养中心电话地址 天津宠物领养中心电话地址查询</a></li>
+                        <li class="py-2"><a href="/html/category/article-9907.htm" title="宠物粮食品牌上市公司名单最新（国内宠物粮上市公司）">宠物粮食品牌上市公司名单最新（国内宠物粮上市公司）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,8 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">10</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">52</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
