--- a/html/date/2024-07/index.htm
+++ b/html/date/2024-07/index.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8196.htm" title="宠物托运送货上门多少钱（宠物托运送货上门多少钱一个月）">宠物托运送货上门多少钱（宠物托运送货上门多少钱一个月）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9062.htm" title="猫瘟疫苗要打几次（猫瘟疫苗打几次有效）">猫瘟疫苗要打几次（猫瘟疫苗打几次有效）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8471.htm" title="警长警探（女子特案组）怎么可以错过，">警长警探（女子特案组）怎么可以错过，</a></li>
-                        <li class="py-2"><a href="/html/category/article-8308.htm" title="减脂番茄豆腐汤的做法(低脂番茄豆腐汤)">减脂番茄豆腐汤的做法(低脂番茄豆腐汤)</a></li>
-                        <li class="py-2"><a href="/html/category/article-7922.htm" title="动物接种疫苗多少钱一次啊深圳 动物接种疫苗多少钱一次啊深圳市">动物接种疫苗多少钱一次啊深圳 动物接种疫苗多少钱一次啊深圳市</a></li>
-                        <li class="py-2"><a href="/html/category/article-7702.htm" title="厦门哪里可以免费领养猫（厦门免费领养猫正规网）">厦门哪里可以免费领养猫（厦门免费领养猫正规网）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8804.htm" title="宠爱国际动物医院在哪里直播（宠爱国际动物园怎么样）">宠爱国际动物医院在哪里直播（宠爱国际动物园怎么样）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8635.htm" title="领养宠物合同协议书怎么写模板（领养宠物协议书在法律上属于什么合同）">领养宠物合同协议书怎么写模板（领养宠物协议书在法律上属于什么合同）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8909.htm" title="动物疫苗的作用有哪些方面的问题 动物疫苗的作用有哪些方面的问题呢">动物疫苗的作用有哪些方面的问题 动物疫苗的作用有哪些方面的问题呢</a></li>
-                        <li class="py-2"><a href="/html/category/article-7811.htm" title="被误解千年的语句（戏王之王电视剧）全程干货，">被误解千年的语句（戏王之王电视剧）全程干货，</a></li>
+                        <li class="py-2"><a href="/html/category/article-9446.htm" title="浙江少儿频道台标（浙江少儿频道在线直播观看）">浙江少儿频道台标（浙江少儿频道在线直播观看）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9226.htm" title="甘蓝菜的做法（甘蓝菜的做法大全家常）">甘蓝菜的做法（甘蓝菜的做法大全家常）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9391.htm" title="动物疫苗的正确使用方法视频讲解教程（动物疫苗接种方法有哪些）">动物疫苗的正确使用方法视频讲解教程（动物疫苗接种方法有哪些）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10422.htm" title="趣店预制菜事件是真的吗">趣店预制菜事件是真的吗</a></li>
+                        <li class="py-2"><a href="/html/category/article-10473.htm" title="川式干锅鸭的做法大全(川式干锅鸭的做法和配料)">川式干锅鸭的做法大全(川式干锅鸭的做法和配料)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10120.htm" title="一片枫叶一片红下一句（一片枫叶一片情下一句是什么）">一片枫叶一片红下一句（一片枫叶一片情下一句是什么）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10421.htm" title="宠物粮食加工厂好做吗知乎（宠物粮食加工厂好做吗知乎推荐）">宠物粮食加工厂好做吗知乎（宠物粮食加工厂好做吗知乎推荐）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9547.htm" title="自制狗粮机 自制狗粮机器">自制狗粮机 自制狗粮机器</a></li>
+                        <li class="py-2"><a href="/html/category/article-10368.htm" title="南京宠物医院领养狗狗要求（南京宠物收容中心）">南京宠物医院领养狗狗要求（南京宠物收容中心）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10173.htm" title="开个小型宠物食品加工厂怎么接单子呢（开个小型宠物食品加工厂怎么接单子呢）">开个小型宠物食品加工厂怎么接单子呢（开个小型宠物食品加工厂怎么接单子呢）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,8 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">10</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">52</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
