--- a/html/date/2024-07/page-2.htm
+++ b/html/date/2024-07/page-2.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8029.htm" title="简述动物防疫管理的要点是什么（简述动物防疫管理的要点是什么意思）">简述动物防疫管理的要点是什么（简述动物防疫管理的要点是什么意思）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8420.htm" title="动物医院许可证办理流程图（动物医院诊疗许可证办理）">动物医院许可证办理流程图（动物医院诊疗许可证办理）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8803.htm" title="动物接种疫苗多少次有效呢（动物接种疫苗多少次有效呢）">动物接种疫苗多少次有效呢（动物接种疫苗多少次有效呢）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9113.htm" title="哈尔滨农大动物医院地址 哈尔滨农大动物医院地址在哪">哈尔滨农大动物医院地址 哈尔滨农大动物医院地址在哪</a></li>
-                        <li class="py-2"><a href="/html/category/article-8249.htm" title="狗粮品牌十大排行国产有哪些（狗粮排名前十品牌国产）">狗粮品牌十大排行国产有哪些（狗粮排名前十品牌国产）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8471.htm" title="警长警探（女子特案组）怎么可以错过，">警长警探（女子特案组）怎么可以错过，</a></li>
-                        <li class="py-2"><a href="/html/category/article-8525.htm" title="豆豉蒜头煮南瓜的做法大全(豆豉蒜头煮南瓜的做法窍门)">豆豉蒜头煮南瓜的做法大全(豆豉蒜头煮南瓜的做法窍门)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8636.htm" title="宠物领养平台app推荐下载苹果手机（宠物领养平台app推荐下载苹果手机软件）">宠物领养平台app推荐下载苹果手机（宠物领养平台app推荐下载苹果手机软件）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8139.htm" title="宠物粮食批发价格 宠物粮食批发价格表">宠物粮食批发价格 宠物粮食批发价格表</a></li>
-                        <li class="py-2"><a href="/html/category/article-8195.htm" title="知名奶茶店品牌(前10名奶茶店有哪些牌子)">知名奶茶店品牌(前10名奶茶店有哪些牌子)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10576.htm" title="领养宠物协议 领养宠物协议书范本">领养宠物协议 领养宠物协议书范本</a></li>
+                        <li class="py-2"><a href="/html/category/article-9799.htm" title="宠物领养中心app 宠物领养中心要钱吗">宠物领养中心app 宠物领养中心要钱吗</a></li>
+                        <li class="py-2"><a href="/html/category/article-10174.htm" title="宠物领养市场规模分析图（宠物领养数据）">宠物领养市场规模分析图（宠物领养数据）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9656.htm" title="红烧草鱼怎么做图解视频(红烧草鱼怎么做图解大全)">红烧草鱼怎么做图解视频(红烧草鱼怎么做图解大全)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10575.htm" title="宠物店赔钱吗（宠物店暴利吗）">宠物店赔钱吗（宠物店暴利吗）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9547.htm" title="自制狗粮机 自制狗粮机器">自制狗粮机 自制狗粮机器</a></li>
+                        <li class="py-2"><a href="/html/category/article-10526.htm" title="宠物粮商标名字 宠物粮商标名字大全">宠物粮商标名字 宠物粮商标名字大全</a></li>
+                        <li class="py-2"><a href="/html/category/article-10680.htm" title="宠物粮食店赚钱吗 宠物粮食店赚钱吗现在">宠物粮食店赚钱吗 宠物粮食店赚钱吗现在</a></li>
+                        <li class="py-2"><a href="/html/category/article-10173.htm" title="开个小型宠物食品加工厂怎么接单子呢（开个小型宠物食品加工厂怎么接单子呢）">开个小型宠物食品加工厂怎么接单子呢（开个小型宠物食品加工厂怎么接单子呢）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9744.htm" title="猫咪三针疫苗多久打一次好（猫咪三针疫苗需要多久）">猫咪三针疫苗多久打一次好（猫咪三针疫苗需要多久）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,8 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">10</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">52</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
