--- a/html/date/2024-07/page-6.htm
+++ b/html/date/2024-07/page-6.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8472.htm" title="广州宠物领养平台官网电话（广州市宠物领养平台）">广州宠物领养平台官网电话（广州市宠物领养平台）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7702.htm" title="厦门哪里可以免费领养猫（厦门免费领养猫正规网）">厦门哪里可以免费领养猫（厦门免费领养猫正规网）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8857.htm" title="梦见抱着别人的女婴儿是什么意思（梦见抱着别人的小女孩什么意思）">梦见抱着别人的女婴儿是什么意思（梦见抱着别人的小女孩什么意思）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7921.htm" title="动物打一针疫苗多少钱啊（动物打疫苗的作用）">动物打一针疫苗多少钱啊（动物打疫苗的作用）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7755.htm" title="宠物粮食行业发展前景如何知乎（宠物粮食行业发展前景如何知乎）">宠物粮食行业发展前景如何知乎（宠物粮食行业发展前景如何知乎）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7975.htm" title="宠物领养证如何办理的流程（宠物领养程序怎么领养）">宠物领养证如何办理的流程（宠物领养程序怎么领养）</a></li>
-                        <li class="py-2"><a href="/html/category/article-9061.htm" title="拌料机的用途（大型拌料机的工作视频）">拌料机的用途（大型拌料机的工作视频）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8140.htm" title="宠物粮怎么加工出来的 宠物粮怎么加工出来的呢">宠物粮怎么加工出来的 宠物粮怎么加工出来的呢</a></li>
-                        <li class="py-2"><a href="/html/category/article-8139.htm" title="宠物粮食批发价格 宠物粮食批发价格表">宠物粮食批发价格 宠物粮食批发价格表</a></li>
-                        <li class="py-2"><a href="/html/category/article-8364.htm" title="宠物用品厂家进货渠道批发（宠物用品货源渠道）">宠物用品厂家进货渠道批发（宠物用品货源渠道）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9851.htm" title="宠物粮食加工厂加盟（兔饲料什么牌子的好）">宠物粮食加工厂加盟（兔饲料什么牌子的好）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9445.htm" title="宠物领养论文主要内容范文大全（宠物领养文章）">宠物领养论文主要内容范文大全（宠物领养文章）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10315.htm" title="海拉鲁大陆百度百科 海拉鲁大陆是什么">海拉鲁大陆百度百科 海拉鲁大陆是什么</a></li>
+                        <li class="py-2"><a href="/html/category/article-10316.htm" title="360度全景照相机(360度全景拍摄相机什么牌子好)">360度全景照相机(360度全景拍摄相机什么牌子好)</a></li>
+                        <li class="py-2"><a href="/html/category/article-10070.htm" title="宠物医院好评回复模板怎么写（宠物医院好评回复模板怎么写文案）">宠物医院好评回复模板怎么写（宠物医院好评回复模板怎么写文案）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10575.htm" title="宠物店赔钱吗（宠物店暴利吗）">宠物店赔钱吗（宠物店暴利吗）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10367.htm" title="开一家宠物店需要什么条件（开一家宠物店都需要什么?）">开一家宠物店需要什么条件（开一家宠物店都需要什么?）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10576.htm" title="领养宠物协议 领养宠物协议书范本">领养宠物协议 领养宠物协议书范本</a></li>
+                        <li class="py-2"><a href="/html/category/article-9743.htm" title="怀孕被猫抓了一下轻微破皮挤不出血（怀孕被猫抓伤渗了一点点血）">怀孕被猫抓了一下轻微破皮挤不出血（怀孕被猫抓伤渗了一点点血）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9962.htm" title="仓鼠宠物医生咨询（仓鼠免费问诊）">仓鼠宠物医生咨询（仓鼠免费问诊）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,8 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">10</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">52</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
