--- a/html/date/2024-08/page-3.htm
+++ b/html/date/2024-08/page-3.htm
@@ -290,16 +290,16 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/category/article-8961.htm" title="学美容一个月工资多少左右（美容学出来多少钱工资）">学美容一个月工资多少左右（美容学出来多少钱工资）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8962.htm" title="开宠物店一天利润多少才能不亏本钱（开宠物店预算多少）">开宠物店一天利润多少才能不亏本钱（开宠物店预算多少）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8581.htm" title="小彬彬现在的照片（小小彬）原创，">小彬彬现在的照片（小小彬）原创，</a></li>
-                        <li class="py-2"><a href="/html/category/article-8195.htm" title="知名奶茶店品牌(前10名奶茶店有哪些牌子)">知名奶茶店品牌(前10名奶茶店有哪些牌子)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8526.htm" title="动物医院的好评评语 动物医院的好评评语怎么写">动物医院的好评评语 动物医院的好评评语怎么写</a></li>
-                        <li class="py-2"><a href="/html/category/article-8420.htm" title="动物医院许可证办理流程图（动物医院诊疗许可证办理）">动物医院许可证办理流程图（动物医院诊疗许可证办理）</a></li>
-                        <li class="py-2"><a href="/html/category/article-7921.htm" title="动物打一针疫苗多少钱啊（动物打疫苗的作用）">动物打一针疫苗多少钱啊（动物打疫苗的作用）</a></li>
-                        <li class="py-2"><a href="/html/category/article-8525.htm" title="豆豉蒜头煮南瓜的做法大全(豆豉蒜头煮南瓜的做法窍门)">豆豉蒜头煮南瓜的做法大全(豆豉蒜头煮南瓜的做法窍门)</a></li>
-                        <li class="py-2"><a href="/html/category/article-7701.htm" title="哪个处理器的核显性能最高(哪款处理器的核显性能好)">哪个处理器的核显性能最高(哪款处理器的核显性能好)</a></li>
-                        <li class="py-2"><a href="/html/category/article-8582.htm" title="开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）">开宠物医院需要几个职业兽医资格证（开宠物医院需要几个职业兽医资格证呢）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10627.htm" title="动物在哪打疫苗好（动物在哪打疫苗好一点）">动物在哪打疫苗好（动物在哪打疫苗好一点）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10228.htm" title="动物疫苗在哪买比较好呢（动物疫苗在哪里买）">动物疫苗在哪买比较好呢（动物疫苗在哪里买）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9392.htm" title="螺杆泵品牌排名(中国十大螺杆泵品牌)">螺杆泵品牌排名(中国十大螺杆泵品牌)</a></li>
+                        <li class="py-2"><a href="/html/category/article-9226.htm" title="甘蓝菜的做法（甘蓝菜的做法大全家常）">甘蓝菜的做法（甘蓝菜的做法大全家常）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9800.htm" title="成都宠物托运平台哪家好点的（成都狗狗托运公司）">成都宠物托运平台哪家好点的（成都狗狗托运公司）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10576.htm" title="领养宠物协议 领养宠物协议书范本">领养宠物协议 领养宠物协议书范本</a></li>
+                        <li class="py-2"><a href="/html/category/article-9961.htm" title="58同城领养宠物可信吗（五八同城领养宠物）">58同城领养宠物可信吗（五八同城领养宠物）</a></li>
+                        <li class="py-2"><a href="/html/category/article-9655.htm" title="哪个品牌的微波炉质量最好">哪个品牌的微波炉质量最好</a></li>
+                        <li class="py-2"><a href="/html/category/article-9280.htm" title="宠物粮市场分析论文怎么写好（宠物粮市场开发方案）">宠物粮市场分析论文怎么写好（宠物粮市场开发方案）</a></li>
+                        <li class="py-2"><a href="/html/category/article-10015.htm" title="宠物寄养店怎么开行情怎么样（宠物寄养店怎么运营）">宠物寄养店怎么开行情怎么样（宠物寄养店怎么运营）</a></li>
                     </ul>
     </div>
 </div>
@@ -310,7 +310,8 @@ var _hmt = _hmt || [];
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0">
-                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">6</span></li>
+                        <li class="py-2"><a href="/html/date/2024-11/" title="2024-11 归档">2024-11 </a> <span class="badge">10</span></li>
+                        <li class="py-2"><a href="/html/date/2024-10/" title="2024-10 归档">2024-10 </a> <span class="badge">52</span></li>
                         <li class="py-2"><a href="/html/date/2024-09/" title="2024-09 归档">2024-09 </a> <span class="badge">54</span></li>
                         <li class="py-2"><a href="/html/date/2024-08/" title="2024-08 归档">2024-08 </a> <span class="badge">62</span></li>
                         <li class="py-2"><a href="/html/date/2024-07/" title="2024-07 归档">2024-07 </a> <span class="badge">62</span></li>
